--- a/GUI/Controls/EmployeeProfile.xaml
+++ b/GUI/Controls/EmployeeProfile.xaml
@@ -16,41 +16,51 @@
 
 
         <StackPanel DataContext="{Binding Employee}">
-            <DockPanel>
-                <TextBlock Style="{StaticResource ProfileText}" Text="Name: "/>
-                <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Name}"/>
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Style="{StaticResource ProfileText}" Text="Address: "/>
-                <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Address}"/>
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Style="{StaticResource ProfileText}" Text="Position: "/>
-                <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Position}"/>
-            </DockPanel>
-            <DockPanel>
-                <TextBlock Style="{StaticResource ProfileText}" Text="Salary: "/>
-                <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Salary}"/>
-            </DockPanel>
+            <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Name, StringFormat='Name: {0}'}"/>
+            <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Address, StringFormat='Address: {0}'}"/>
+            <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Position, StringFormat='Position: {0}'}"/>
+            <TextBlock Style="{StaticResource ProfileText}" Text="{Binding Salary, StringFormat='Salary: {0}'}"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="1">
+        <StackPanel
+            Grid.Column="1"
+            Margin="15, 0">
             <Button
+                Margin="0,0,0,5"
                 Content="DELETE"
                 Click="DeleteButton_Click"
+                HorizontalAlignment="Center"
                 Style="{StaticResource SmallButton}"/>
-            <Label Content="New name:"/>
-            <TextBox Text="{Binding EnteredName, Mode=TwoWay}" />
-            <Label Content="New address:"/>
-            <TextBox Text="{Binding EnteredAddress, Mode=TwoWay}" />
-            <Label Content="New position:"/>
-            <TextBox Text="{Binding EnteredPosition, Mode=TwoWay}" />
-            <Label Content="New salary:"/>
-            <TextBox Text="{Binding EnteredSalary, Mode=TwoWay}"
-                PreviewTextInput="PositiveDoubleTextBox_PreviewTextInput"/>
+            <Label
+                Content="New name:"
+                Style="{StaticResource DefaultLabel}"/>
+            <TextBox
+                Text="{Binding EnteredName, Mode=TwoWay}"
+                Style="{StaticResource InputTextBox}"/>
+            <Label
+                Content="New address:"
+                Style="{StaticResource DefaultLabel}"/>
+            <TextBox
+                Text="{Binding EnteredAddress, Mode=TwoWay}"
+                Style="{StaticResource InputTextBox}"/>
+            <Label
+                Content="New position:"
+                Style="{StaticResource DefaultLabel}"/>
+            <TextBox
+                Text="{Binding EnteredPosition, Mode=TwoWay}"
+                Style="{StaticResource InputTextBox}"/>
+            <Label
+                Content="New salary:"
+                Style="{StaticResource DefaultLabel}"/>
+            <TextBox
+                Text="{Binding EnteredSalary, Mode=TwoWay}"
+                PreviewTextInput="PositiveDoubleTextBox_PreviewTextInput"
+                Style="{StaticResource InputTextBox}"/>
             <Button
-                Content="Update profile"
+                Margin="0,5,0,0"
+                Content="Update changed"
                 Click="UpdateButton_Click"
+                HorizontalAlignment="Center"
                 Style="{StaticResource SmallButton}"/>
         </StackPanel>
 
