--- a/GUI/Views/CompetitionsView.xaml
+++ b/GUI/Views/CompetitionsView.xaml
@@ -15,27 +15,38 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid>
+        
+        <Grid Margin="15, 15">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <TextBox Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox
+                Text="{Binding SearchText, Mode=TwoWay,  UpdateSourceTrigger=PropertyChanged}"
+                Margin="0, 0, 0, 10"
+                Style="{StaticResource SearchBar}"/>
             <ScrollViewer
                 Grid.Row="1"
                 CanContentScroll="True"
                 VerticalScrollBarVisibility="Auto"
                 Height="Auto">
+                <ScrollViewer.Resources>
+                    <Style TargetType="ScrollBar" BasedOn="{StaticResource ScrollViewerScrollBar}" />
+                </ScrollViewer.Resources>
                 <ItemsControl 
                     ItemsSource="{Binding FilteredCompetitions}">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <DockPanel
                                 MouseLeftButtonDown="Competitions_MouseLeftButton">
-                                <TextBlock Style="{StaticResource ListText}" Text="Name:"/>
-                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Name}"/>
-                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="Date:"/>
-                                <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Date, StringFormat={}{0:yy-MM-dd}}"/>
+                                <TextBlock Style="{StaticResource ListText}" >
+                                    <TextBlock.Text>
+                                        <MultiBinding StringFormat="{}{0}, {1:yyyy-MM-dd}">
+                                            <Binding Path="Name"/>
+                                            <Binding Path="Date"/>
+                                        </MultiBinding>
+                                    </TextBlock.Text>
+                                </TextBlock>
                             </DockPanel>
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
@@ -43,23 +54,52 @@
             </ScrollViewer>
         </Grid>
 
-        <StackPanel
+        <Grid
+            Margin="0, 15, 15, 0"
             Grid.Row="1">
-            <Button 
-                Style="{StaticResource SmallButton}"
-                Content="ADD COMPETITION"
-                Command="{Binding AddCompetitionCommand}"/>
-            <Label Content="*Name:"/>
-            <TextBox Text="{Binding EnteredName, Mode=TwoWay}" />
-            <Label Content="*Location:"/>
-            <TextBox Text="{Binding EnteredLocation, Mode=TwoWay}" />
-            <Label Content="*Date:"/>
-            <DatePicker SelectedDate="{Binding EnteredDate, Mode=TwoWay}"/>
-        </StackPanel>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <TextBlock
+                Grid.Row="0"
+                Text="NEW COMPETITION:"
+                HorizontalAlignment="Center"
+                Style="{StaticResource Header}"/>
+            <StackPanel
+                Grid.Row="1"
+                Margin="10, 0">
+                <Label
+                    Content="*Name:"
+                    Style="{StaticResource DefaultLabel}"/>
+                <TextBox
+                    Text="{Binding EnteredName, Mode=TwoWay}"
+                    Style="{StaticResource InputTextBox}"/>
+                <Label
+                    Content="*Location:"
+                    Style="{StaticResource DefaultLabel}"/>
+                <TextBox
+                    Text="{Binding EnteredLocation, Mode=TwoWay}"
+                    Style="{StaticResource InputTextBox}"/>
+                <Label
+                    Content="*Date:"
+                    Style="{StaticResource DefaultLabel}"/>
+                <DatePicker
+                    SelectedDate="{Binding EnteredDate, Mode=TwoWay}"
+                    />
+                <Button
+                    Margin="0,5,0,0"
+                    Style="{StaticResource SmallButton}"
+                    Content="ADD"
+                    HorizontalAlignment="Center"
+                    Command="{Binding AddCompetitionCommand}"/>
+            </StackPanel>
+        </Grid>
 
         <controls:CompetitionProfile
             Grid.Column="1"
             Grid.Row="0"
+            Margin="0,15,0,0"
             Competition="{Binding DataContext.SelectedCompetition, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             DeleteCommand="{Binding DataContext.DeleteCompetitionCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             UpdateCommand="{Binding DataContext.UpdateCompetitionCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}">
@@ -78,12 +118,12 @@
         <Grid
             Grid.Row="1"
             Grid.Column="1"
-            Width="400"
+            Margin="0,15,0,0"
             HorizontalAlignment="Left">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
             <Grid.Style>
                 <Style TargetType="Grid">
                     <Setter Property="Visibility" Value="Visible" />
@@ -94,39 +134,73 @@
                     </Style.Triggers>
                 </Style>
             </Grid.Style>
-            <StackPanel>
-                <Label Content="Award:"/>
-                <TextBox Text="{Binding EnteredAward, Mode=TwoWay}"/>
-                <Label Content="Animal:"/>
+            <StackPanel
+                Width="250">
+                <Label
+                    Content="Animal:"
+                    Style="{StaticResource DefaultLabel}"/>
                 <ComboBox 
                     ItemsSource="{Binding AvailableAnimals}"
                     DisplayMemberPath="Name"
-                    SelectedItem="{Binding EnteredAnimal}"/>
+                    SelectedItem="{Binding EnteredAnimal}"
+                    Style="{StaticResource InputComboBox}"/>
+                <Label
+                    Content="Award:"
+                    Style="{StaticResource DefaultLabel}"/>
+                <TextBox
+                    Text="{Binding EnteredAward, Mode=TwoWay}"
+                    Style="{StaticResource InputTextBox}"/>
                 <Button
                     Style="{StaticResource SmallButton}"
                     Content="ADD PARTICIPATION"
+                    HorizontalAlignment="Center"
                     Command="{Binding AddParticipationCommand}"/>
             </StackPanel>
-            <ItemsControl
-                Grid.Row="1"
-                ItemsSource="{Binding Participations}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <DockPanel>
-                            <TextBlock Style="{StaticResource ListText}" Text="Animal name:"/>
-                            <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Animal.Name}"/>
-                            <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="Award:"/>
-                            <TextBlock Margin="10,0,0,0" Style="{StaticResource ListText}" Text="{Binding Award}"/>
-                            <Button
-                                Style="{StaticResource SmallButton}"
-                                Content="DELETE"
-                                Command="{Binding DataContext.DeleteParticipationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
-                                CommandParameter="{Binding}"/>
-                        </DockPanel>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
+            <ScrollViewer
+                HorizontalAlignment="Right"
+                Margin="10,0,0,0"
+                Grid.Column="1"
+                CanContentScroll="True"
+                VerticalScrollBarVisibility="Auto">
+                <ScrollViewer.Resources>
+                    <Style TargetType="ScrollBar" BasedOn="{StaticResource ScrollViewerScrollBar}" />
+                </ScrollViewer.Resources>
+                <StackPanel>
+                    <TextBlock
+                        Margin="5,0,0,0"
+                        Text="Participants:"
+                        Style="{StaticResource Header}"/>
+                    <ItemsControl
+                        ItemsSource="{Binding Participations}">
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <DockPanel>
+                                    <TextBlock Style="{StaticResource ListText}">
+                                        <TextBlock.Text>
+                                            <MultiBinding StringFormat="{}{0}, {1}">
+                                                <Binding Path="Animal.Name" />
+                                                <Binding Path="Award" />
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
+                                    <Button
+                                        Margin="20,0,0,0"
+                                        Style="{StaticResource ButtonWithIcon}"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Right"
+                                        Command="{Binding DataContext.DeleteParticipationCommand, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+                                        CommandParameter="{Binding}">
+                                        <Image
+                                            Width="15"
+                                            Height="15"
+                                            Source="/Resources/Icons/delete.png"/>
+                                    </Button>
+                                </DockPanel>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </StackPanel>
+            </ScrollViewer>
         </Grid>
-
     </Grid>
 </UserControl>
