--- a/GUI/Views/MainWindow.xaml
+++ b/GUI/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280" ResizeMode="NoResize">
+        Title="PetShop" Height="720" Width="1280" ResizeMode="NoResize">
 
     <Grid Background="#001219">
         <Grid.ColumnDefinitions>
